endpoints sliced into smaller pieces
